k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-dev
  namespace: dev
spec:
  selector:
    app: microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
